shrunk header and changed font sizes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-name:         WSU Application Development
+name:         WSU Application Development Club
 tagline:      The Beginning of a Journey
 baseurl:      ""
 
